# EasySell

./: .gitignore  .vercelignore  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
api/: main.py
src/: env.example  main.py  pyproject.toml
src/Application/Contracts/: iproduct_repository.py  iproduct_service.py  iuser_repository.py  iuser_service.py
src/Application/UseCases/DTOs/Product/: create_product_dto.py  product_dto.py
src/Application/UseCases/DTOs/User/: create_user_dto.py  user_dto.py
src/Application/UseCases/Services/: product_service.py  user_service.py
src/Domain/Entities/: Product.py  User.py
src/Persistence/Repositories/: product_repository.py  user_repository.py
src/WebApi/Controllers/: product_controller.py  user_controller.py
src/application/common/responses/: base_response.py
src/application/contracts/persistence/: abc_product_repository.py  abc_unit_of_work.py  abc_user_repository.py  product_repository_contract.py  user_repository_contract.py
src/application/features/product/: product_service.py
src/application/features/user/: user_service.py
src/domain/entities/: product.py  user.py
src/persistence/: db_client.py
src/persistence/models/: product_model.py  user_model.py
src/persistence/repositories/: product_repository.py  unit_of_work.py  user_repository.py
src/webapi/configuration/: app_configuration.py
src/webapi/controllers/: product_controller.py  user_controller.py
src/webapi/responses/: api_response.py
src/webapi/schemas/: product_schema.py  user_schema.py
(+8 files in other folders)
