[tool.poetry]
name = "easysell-backend"
version = "0.1.0"
description = "Backend for EasySell."
authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
bson = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
